# biodivine-xml-doc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml
benches/: Cargo.toml  bench.rs
src/: document.rs  element.rs  error.rs  lib.rs  parser.rs
tests/: test_documents.rs  test_parse.rs  test_write.rs
