[package]
name = "biodivine-xml-doc"
version = "0.3.1"
authors = ["Yoonchae Lee <bluegreenmagick@gmail.com>", "Samuel Pastva <sam.pastva@gmail.com>"]
description = "Read, modify and write xml in tree-like structure. Supports UTF-16."
edition = "2021"
repository = "https://github.com/sybila/biodivine-xml-doc"
license = "MIT OR Apache-2.0"
keywords = ["xml", "parser", "reader", "writer"]
categories = ["parser-implementations", "data-structures", "encoding"]
autobenches = false

[dependencies]
quick-xml = "0.31.0"
encoding_rs = "0.8"

[workspace]
exclude = ["benches"]

[dev-dependencies]
itertools = "0.12.0"
